Add center justification rule for images

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,10 @@ h2 {
 }
 
 img {
-    border: 5px solid #000;
-    justify-content: center;
+  display: flex;
+  border: 5px solid #000;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 /* Black background color */
