--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,27 @@ h2 {
   font-weight: normal;
 }
 
-img {
+alphabet_container {
   display: flex;
-  border: 5px solid #000;
+  flex-wrap: wrap;
   justify-content: flex-end;
   align-items: center;
+  gap: 10px;
+  padding: 10px;
+}
+
+alphabet_img {
+  width: 168px;
+  height: 187px;
+  object-fit: cover;
+  border: 2px solid #000;
+}
+
+img {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border: 5px solid #000;
 }
 
 /* Black background color */
