--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@ h2 {
 alphabet_container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
-  gap: 10px;
+  flex-direction: row-reverse;
 }
 
 alphabet_img {
