--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ body {
 }
 
 .alphabet_container .alphabet_img {
+  width: 100px;
+  height: 100px;
   border: 2px solid #000;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
