--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
   gap: 5px;
 }
 
-.alphabet_container .alphabet_img {
+.alphabet_img {
   width: 90px;
   height: 180px;
   border: 2px solid #000;
