--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@ p {
 }
 
 body {
-  /* background: linear-gradient(to bottom, #f8f9fa, #e9ecef); */
   color: #333;
   margin: 0;
   padding: 0;
@@ -82,6 +81,11 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
+}
+
+.alphabet_example:hover {
+  transform: scale(1.1);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 /* Black background color */
