--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,20 @@ body {
   opacity: 1;
 }
 
+.alphabet_intro {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.alphabet_text {
+  max-width: 80%;
+}
+
+/* .alphabet_legend {
+  height: auto;
+} */
+
 .alphabet_container {
   display: flex;
   flex-wrap: wrap;
