--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,17 @@
 
 h1 {
     text-align: center;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: normal;
 }
 
 h2 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: normal;
 }
 
 p {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: normal;
 }
 
