--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 /* Place your CSS styles in this file */
 
+html {
+  scroll-behavior: smooth;
+  min-height: 100%;
+}
+
 h1 {
     text-align: center;
     font-family: "Montserrat", sans-serif;
