--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ body {
 }
 
 .alphabet_img:hover {
+  cursor: pointer;
   transform: scale(1.1);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
@@ -103,6 +104,7 @@ body {
 }
 
 .alphabet_example:hover {
+  cursor: pointer;
   transform: scale(1.1);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
