Change bg color for navbar items

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ body {
 
 /* Color for active links */
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #0444fd;
   color: white;
 }
 
