--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
+html, body {
+  height: 100%;
+}
+
 html {
   scroll-behavior: smooth;
-  min-height: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
+}
+
+ol[class="breadcrumb"] {
+  background-color: transparent;
 }
 
 .main {
