--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,6 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-p[class="text-pashto"] {
-  font-family: 'Amiri', sans-serif;
-}
-
 ol[class="breadcrumb"] {
   background-color: transparent;
 }
@@ -100,4 +96,8 @@ ol[class="breadcrumb"] {
   cursor: pointer;
   transform: scale(1.1);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.text-pashto {
+  font-family: 'Amiri', sans-serif;
 }
