Experiment with new color scheme

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,6 @@ ol[class="breadcrumb"] {
   unicode-bidi: isolate;
 }
 
-.bg-pak {
-  background-color: #00401a;
+.bg-sky-blue {
+  background-color: #87ceeb;
 }
