Experiment with new color scheme

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ ol[class="breadcrumb"] {
 }
 
 .bg-second-color {
-  background-color: #edf4f2;
+  background-color: #bdd5ce;
 }
 
 .text-first-color {
