--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,9 @@ ol[class="breadcrumb"] {
 .text-first-color {
   color: #31473a;
 }
+
+#scroll_progress {
+  width: 0;
+  height: 5px;
+  background-color: #0d6efd;
+}
