Add link styling

--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,25 @@ ol[class="breadcrumb"] {
   height: 5px;
   background-color: #0d6efd;
 }
+
+/* Link styling */
+
+a {
+  text-decoration: none;
+  position: relative;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background-color: currentcolor;
+  transition: width 0.3s ease-in-out;
+}
+
+a:hover::after {
+  width: 100%;
+}
