--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
+@keyframes h1slide {
+  0% {
+    transform: translateY(-500%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes h2slide {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+h1 {
+  text-align: center;
+  animation: h1slide 1s ease-in-out;
+}
+
+h2 {
+  animation: h2slide 1s ease-in-out;
+}
+
 html, body {
   min-height: 100vh;
 }
@@ -12,90 +41,37 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  position: relative;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background-color: currentcolor;
+  transition: width 0.3s ease-in-out;
+}
+
+a:hover::after {
+  width: 100%;
+}
+
+img {
+  transition: transform 0.3s;
+}
+
+img:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
 ol[class="breadcrumb"] {
   background-color: transparent;
-}
-
-.main {
-  padding: 0 15px;
-}
-
-.info {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.info .info-text {
-  visibility: hidden;
-  width: 120px;
-  background-color: #fff;
-  color: #000;
-  text-align: center;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 5px 9px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  position: absolute;
-  z-index: 10;
-  bottom: 150%;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.info:hover .info-text {
-  visibility: visible;
-  opacity: 1;
-}
-
-.alphabet_intro {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-}
-
-.alphabet_text {
-  max-width: 80%;
-}
-
-.alphabet_container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row-reverse;
-  justify-content: center;
-  gap: 5px;
-}
-
-.alphabet_img {
-  width: 90px;
-  height: 180px;
-  border: 3px solid #444;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease-in-out;
-}
-
-.alphabet_img:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-}
-
-.alphabet_example {
-  width: 240px;
-  height: 180px;
-  border: 3px solid #444;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease-in-out;
-}
-
-.alphabet_example:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 .text-pashto {
@@ -120,59 +96,4 @@ ol[class="breadcrumb"] {
   width: 0;
   height: 5px;
   background-color: #0d6efd;
-}
-
-/* Link styling */
-
-a {
-  text-decoration: none;
-  position: relative;
-}
-
-a::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0%;
-  height: 2px;
-  background-color: currentcolor;
-  transition: width 0.3s ease-in-out;
-}
-
-a:hover::after {
-  width: 100%;
-}
-
-/* Make h1 elements slide in from the top of the screen */
-
-@keyframes h1slide {
-  0% {
-    transform: translateY(-500%);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-h1 {
-  text-align: center;
-  animation: h1slide 1s ease-in-out;
-}
-
-/* Make h2 elements slide in from the left of the screen */
-
-@keyframes h2slide {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(0);
-  }
-}
-
-h2 {
-  animation: h2slide 1s ease-in-out;
 }
