--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @keyframes h1slide {
   0% {
-    transform: translateY(-500%);
+    transform: translateX(100%);
   }
 
   100% {
-    transform: translateY(0);
+    transform: translateX(0);
   }
 }
 
