Add universal hover rule to make cursor change to pointer

--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,11 @@ img {
 }
 
 img:hover {
-  cursor: pointer;
   transform: scale(1.2);
+}
+
+*:hover {
+  cursor: pointer;
 }
 
 ol[class="breadcrumb"] {
