--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,8 @@ h2 {
   animation: h2slide 1.5s ease-in-out;
 }
 
-html, body {
+html,
+body {
   min-height: 100vh;
 }
 
@@ -38,7 +39,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 a {
@@ -79,7 +80,7 @@ ol[class="breadcrumb"] {
 }
 
 .text-pashto {
-  font-family: 'Amiri', sans-serif;
+  font-family: "Amiri", sans-serif;
   direction: rtl;
   unicode-bidi: isolate;
 }
@@ -94,10 +95,4 @@ ol[class="breadcrumb"] {
 
 .text-first-color {
   color: #31473a;
-}
-
-#scroll_progress {
-  width: 0;
-  height: 5px;
-  background-color: #0d6efd;
 }
