--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+.btn {
+  background: linear-gradient(to right, blue, purple);
+}
+
 a:not(.btn) {
   text-decoration: none;
   position: relative;
@@ -53,7 +57,7 @@ a:not(.btn)::after {
   left: 0;
   bottom: 0;
   width: 0%;
-  height: 2px;
+  height: 0.125rem;
   background-color: currentcolor;
   transition: width 0.3s ease-in-out;
 }
