--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,14 @@ body {
 }
 
 .btn {
-  background: linear-gradient(to right, blue, purple);
+  background: linear-gradient(to right, blue, purple, blue);
+  background-size: 200% 100%;
+  background-position: 100% 0;
+  transition: background-position 0.5s ease-in-out;
+}
+
+.btn:hover {
+  background-position: 0 0;
 }
 
 a:not(.btn) {
