--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+nav {
+  height: 4rem;
+}
+
 .btn {
   background: linear-gradient(to right, blue, purple, blue);
   background-size: 200% 100%;
